--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && tsc -p tsconfig.declaration.json",
     "prepare": "npm run build",
     "preview": "vite preview"
   },
@@ -29,15 +29,14 @@
   },
   "devDependencies": {
     "@types/fabric": "^5.3.7",
-    "@types/node": "^18.11.9",
+    "@types/node": "^20.19.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "path": "^0.12.7",
     "rollup-plugin-node-externals": "^7.1.3",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "vite-plugin-dts": "^1.7.1"
+    "vite": "^7.3.1"
   },
   "repository": {
     "type": "git",
